--- a/app/templates/simplecomponent.hbs
+++ b/app/templates/simplecomponent.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Tree Demo 1 page</h1>
+  <h1>Simple Component page</h1>
   <p>Visit the {{#link-to 'index'}}Home Page{{/link-to}}</p>
   {{outlet}}
 </div>
