--- a/app/templates/simplecomponent.hbs
+++ b/app/templates/simplecomponent.hbs
@@ -1,5 +1,9 @@
 <div class="container">
   <h1>Simple Component page</h1>
   <p>Visit the {{#link-to 'index'}}Home Page{{/link-to}}</p>
+  <div>
+    {{simple-component title=f number=42}}
+    {{simple-component title=s number=21}}
+  </div>
   {{outlet}}
 </div>
