Adopt more distinctive names when using simple-component

--- a/app/templates/simplecomponent.hbs
+++ b/app/templates/simplecomponent.hbs
@@ -2,8 +2,8 @@
   <h1>Simple Component page</h1>
   <p>Visit the {{#link-to 'index'}}Home Page{{/link-to}}</p>
   <div>
-    {{simple-component title=f number=42}}
-    {{simple-component title=s number=21}}
+    {{simple-component title=firstTitle number=42}}
+    {{simple-component title=secondTitle number=21}}
   </div>
   {{outlet}}
 </div>
