After creating a 'wrapper' component in order to have a baseline for nested components. This version works with the values hardcoded in the outermost template (actual template not the outermost component)

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,3 +1,4 @@
   <h1>Tree Demo Sandbox</h1>
   <p>Visit the {{#link-to 'simplecomponent'}}Simple Component{{/link-to}}</p>
+  <p>Visit the {{#link-to 'simplecomponentwrapper'}}Simple Component Wrapper{{/link-to}}</p>
   <p>Visit the {{#link-to 'treepage'}}Tree Demo Number 1{{/link-to}}</p>
