After creation of simplecomponentwrapper controller and making use of the properties on that controller to invoke the wrapper component

--- a/app/templates/simplecomponentwrapper.hbs
+++ b/app/templates/simplecomponentwrapper.hbs
@@ -2,8 +2,8 @@
   <h1>Simple Component Wrapper page</h1>
   <p>Visit the {{#link-to 'index'}}Home Page{{/link-to}}</p>
   <div>
-    {{simple-component-wrapper title="firstTitle" number=1933}}
-    {{simple-component-wrapper title="secondTitle" number=1966}}
+    {{simple-component-wrapper title=firstTitle number=firstNumber}}
+    {{simple-component-wrapper title=secondTitle number=secondNumber}}
   </div>
   {{outlet}}
 </div>
