--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,3 +2,4 @@
   <p>Visit the {{#link-to 'simplecomponent'}}Simple Component{{/link-to}}</p>
   <p>Visit the {{#link-to 'simplecomponentwrapper'}}Simple Component Wrapper{{/link-to}}</p>
   <p>Visit the {{#link-to 'treepage'}}Tree Demo Number 1{{/link-to}}</p>
+  <p>Visit the {{#link-to 'simpletree'}}Tree Demo Number 2{{/link-to}}</p>
