--- a/app/templates/simpletree.hbs
+++ b/app/templates/simpletree.hbs
@@ -1,1 +1,12 @@
-{{outlet}}
+<div class="container">
+  <h1>Tree Demo Number 2</h1>
+  <p>Visit the {{#link-to 'index'}}Home Page{{/link-to}}</p>
+  <div>
+    <div class="panel panel-default">
+      <div class="panel-body">
+        {{ember-jstree data=data plugins=plugins}}
+      </div>
+    </div>
+  {{outlet}}
+  </div>
+</div>
