--- a/app/templates/simpletree.hbs
+++ b/app/templates/simpletree.hbs
@@ -2,9 +2,20 @@
   <h1>Tree Demo Number 2</h1>
   <p>Visit the {{#link-to 'index'}}Home Page{{/link-to}}</p>
   <div>
+
+    <div class="search">
+      <h2>Search</h2>
+        {{input type="text" placeholder="Search" class="search-input form-control" value=searchTerm}}
+    </div>
+
     <div class="panel panel-default">
       <div class="panel-body">
-        {{ember-jstree data=data plugins=plugins}}
+        {{ember-jstree
+            data=data
+            plugins=plugins
+            searchOptions=searchOptions
+            searchTerm=searchTerm
+        }}
       </div>
     </div>
   {{outlet}}
