--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -3,3 +3,4 @@
   <p>Visit the {{#link-to 'simplecomponentwrapper'}}Simple Component Wrapper{{/link-to}}</p>
   <p>Visit the {{#link-to 'treepage'}}Tree Demo Number 1{{/link-to}}</p>
   <p>Visit the {{#link-to 'simpletree'}}Tree Demo Number 2{{/link-to}}</p>
+  <p>Visit the {{#link-to 'treeincomponentwrapper'}}Tree Demo Number 3 (Tree in component){{/link-to}}</p>
